fix: period single day overlap

--- a/WEB/src/app/pages/timelinePage/timelinePeriod/timelinePeriod.component.scss
+++ b/WEB/src/app/pages/timelinePage/timelinePeriod/timelinePeriod.component.scss
@@ -2,5 +2,5 @@
     height: var(--buble-size);
     position: absolute;
     background-color: royalblue;
-    border-radius: calc(var(--buble-size) / 2);
+    border-radius: calc(var(--buble-size) / 4);
 }
